# eval-audit

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
agents/docs/: INPUT_CONTRACT.md  STUDY_SCHEMA.md
docs/: INPUT_CONTRACT.md  STUDY_SCHEMA.md  design-ingest.md  design-reports.md  design-schema.md  design-stats.md  testing.md
eval_audit/: __init__.py  checks.py  cli.py  cli_templates.py  fixtures.py  pipeline.py  portfolio.py  scouting_paths.py
eval_audit/ingest/: __init__.py  _prices.py  base.py  generic.py  hal_common.py  hal_gaia.py  hal_tau_bench.py  swe_bench_verified.py  synthetic.py  terminal_bench.py
eval_audit/report/: caveats.py  decisions.py  formatters.py  html.py  markdown.py  presentation.py  provenance.py  sensitivity.py  summary.py  vocabulary.py
eval_audit/schema/: __init__.py  audit_summary.py  enums.py  run_record.py  study.py
eval_audit/spec/: __init__.py  render.py
eval_audit/stats/: __init__.py  agent_metrics.py  analyze.py  bootstrap.py  correction.py  errors.py  outcomes.py  pareto.py  resolution.py  results.py
examples/byo-minimal/: README.md  make_runs.py  study.yaml
examples/decision-gallery/: README.md  make_runs.py
examples/exhibit-c/: runs.parquet
examples/humaneval-direct-completion/: runs.parquet
examples/swe-bench-verified-openhands/: provenance.json  runs.parquet
examples/terminal-bench-2-mux/: provenance.json  runs.parquet
reports/byo-minimal/: analysis.json  check.json  report.html  report.md
reports/cross-harness-confound/: notes.md
reports/decision-gallery/: check.json  report.md
reports/exhibit-a/: analysis.json  report.md
reports/exhibit-b/: analysis.json  report.md
reports/exhibit-c/: analysis.json  report.md
reports/gaia-hal-generalist/: analysis.json  check.json  report.md
reports/humaneval-direct-completion/: analysis.json  check.json  report.md
reports/swe-bench-verified-openhands/: analysis.json  check.json  report.md
reports/tau-bench-airline-tool-calling/: analysis.json  check.json  report.md
reports/terminal-bench-2-mux/: analysis.json  check.json  report.md
rigor/: __init__.py  cli.py
rigor/ingest/: __init__.py  _prices.py  base.py  hal_gaia.py  hal_tau_bench.py  synthetic.py
rigor/report/: __init__.py  decisions.py  markdown.py  sensitivity.py
rigor/schema/: __init__.py  enums.py  run_record.py  study.py
rigor/spec/: __init__.py  render.py
rigor/stats/: __init__.py  analyze.py  bootstrap.py  correction.py  intervals.py
scouting/: README.md  exhibit-a-decision.md  exhibit-c-decision.md  gaia-hal-generalist-decision.md  humaneval-direct-completion-decision.md  swe-bench-verified-openhands-decision.md  tau-bench-airline-tool-calling-decision.md  tau-bench-decision.md  terminal-bench-2-mux-decision.md  webarena-verified-decision.md
scouting/exhibit-c/: NOTICE  README.md  grade.py  humaneval-tasks-30.jsonl  normalize.py  price-table.yaml  run-plan.md  run.py
scouting/humaneval-direct-completion/: NOTICE  README.md  grade.py  normalize.py  price-table.yaml  run-plan.md  run.py
scouting/synthetic/: find_seed.py  generate.py  runs.parquet  spec.yaml  truth.json
studies/: decision-gallery.yaml  exhibit-a.yaml  exhibit-b.yaml  exhibit-c.yaml  gaia-hal-generalist.yaml  humaneval-direct-completion.yaml  swe-bench-verified-openhands.yaml  tau-bench-airline-tool-calling.yaml  terminal-bench-2-mux.yaml
tests/: conftest.py  test_scouting_paths.py
tests/cli/: test_analyze_cmd.py  test_audit_cmd.py  test_check_cmd.py  test_gate_cmd.py  test_help_cmd.py  test_init_cmd.py  test_portfolio_cmd.py  test_report_cmd.py  test_runs_flag.py  test_spec_cmd.py  test_validate_cmd.py  test_version.py  test_version_install_path.py
tests/docs/: test_byo_minimal_readme.py  test_decision_gallery.py  test_input_contract.py  test_study_schema.py
tests/examples/: test_byo_minimal_round_trip.py
tests/ingest/: test_as_reported_only_property.py  test_generic_loader.py  test_hal_gaia_adapter.py  test_hal_tau_bench_adapter.py  test_swe_bench_verified_adapter.py  test_synthetic_adapter.py  test_terminal_bench_adapter.py
tests/packaging/: __init__.py  test_sdist.py
tests/report/: test_cost_not_available_caveat.py  test_cost_provenance_caveat.py  test_decision_impact.py  test_html_renderer.py  test_markdown_renderer.py  test_mde_context.py  test_presentation.py  test_snapshot.py  test_verdict_sensitivity.py  test_verdict_sensitivity_property.py
tests/report_snapshots/: decision-gallery-report.md  exhibit-a-report.md  exhibit-b-report.md  exhibit-c-report.md  gaia-hal-generalist-report.md  humaneval-direct-completion-report.md  swe-bench-verified-openhands-report.md  tau-bench-airline-tool-calling-report.md  terminal-bench-2-mux-report.md
tests/schema/: test_audit_summary.py  test_cost_not_available_provenance.py  test_run_record.py  test_study_spec.py
tests/scouting/: test_exhibit_c_grader.py  test_humaneval_direct_completion_grader.py
tests/spec/: test_render.py
tools/: regenerate_swe_bench_verified.py  regenerate_terminal_bench_mux.py
(+31 files in other folders)
