[project]
name = "rigor"
version = "0.1.0"
description = "Study-specification, reanalysis, and reporting toolkit for agent benchmarks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rigor contributors" }]
dependencies = [
    "pydantic>=2.7",
    "polars>=1.0",
    "scipy>=1.13",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
]

[project.scripts]
rigor = "rigor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rigor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "synthetic_validation: end-to-end recovery checks against scouting/synthetic/",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
