[project]
name = "eval-audit"
version = "0.1.0"
description = "Study-specification, reanalysis, and reporting toolkit for agent benchmarks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "eval-audit contributors" }]
dependencies = [
    "pydantic>=2.7",
    "polars>=1.0",
    "scipy>=1.13",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    # Used only by scouting/synthetic/generate.py; not a runtime dep of eval-audit.
    "pyarrow>=17.0",
]

[project.scripts]
eval-audit = "eval_audit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eval_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "synthetic_validation: end-to-end recovery checks against scouting/synthetic/",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Typer's idiomatic API requires Argument()/Option() calls in defaults.
"eval_audit/cli.py" = ["B008"]
